# lrc-leagues

./: README.md
backend/: .gitignore  pyproject.toml  railway.json
backend/src/backend/: auth.py  constants.py  database.py  enums.py  main.py  models.py  points.py  schemas.py
backend/src/backend/routers/: matches.py  players.py
backend/src/backend/routers/leagues/: __init__.py  divisions.py  leagues.py  standings.py
frontend/: components.json  index.html  package-lock.json  package.json  railway.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: InnerSidebar.tsx  Layout.tsx  LeagueExplainer.tsx  MobileNav.tsx  Navbar.tsx  OuterSidebar.tsx  ScoringExplainer.tsx
frontend/src/context/: LeaguesContext.ts  LeaguesProvider.tsx  useLeagues.tsx
frontend/src/hooks/: useAdminAuth.ts
frontend/src/pages/: Admin.tsx  AllLeagues.tsx  Home.tsx  League.tsx  NotFound.tsx
frontend/src/pages/admin/: Leagues.tsx
frontend/src/pages/league/: Admin.tsx  MatchHistory.tsx  Rules.tsx  Standings.tsx  SubmitMatch.tsx
frontend/src/pages/league/admin/: Divisions.tsx  Players.tsx  Settings.tsx  Setup.tsx
